--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/instagram.css' rel='stylesheet'>
     <script src="./scripts/main.js" defer></script>
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <nav class="navbar">
             <ul class="navbar__ul">
                 <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link actived"
                         href="#home">Home</a></li>
                 <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="#about">About</a>
                 </li>
-                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="#projects">Projects</a></li>
-                <img src="https://placehold.co/50x50" alt="placeholder">
-                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="">Skills</a></li>
-                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="">Services</a></li>
-                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="">Contact</a></li>
+                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link"
+                        href="#projects">Projects</a></li>
+                <!-- <img src="https://placehold.co/50x50" alt="placeholder"> -->
+                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="#skills">Skills</a>
+                </li>
+                <!-- <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="">Services</a></li> -->
+                <li class="navbar__ul__li-item"><a class="navbar__ul__li-item__link js-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
         <section class="section" id="home">
@@ -33,7 +37,7 @@
                     <h2 class="hello">Hello, world!</h2>
                 </div>
                 <div class="profilepic">
-                    <img class="profilepic__img" src="./images/Screenshot_18.png" alt="">
+                    <img data-aos="fade-up" class="profilepic__img" src="./images/Screenshot_18.png" alt="">
                 </div>
             </div>
         </section>
@@ -64,36 +68,42 @@
             </div>
         </section>
         <section class="section" id="projects">
+            <div class="container">
+            </div>
             <div class="body-carrousel">
-                <div class="wrapper">
+                <div class="wrapper" data-aos="fade-up">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <ul class="carousel">
                         <li class="card">
                             <div class="img"><img src="images/Screenshot_19.png" alt="img" draggable="false"></div>
                             <h2>Cardápio Digital</h2>
                             <button class="link-button">
-                                <a target="_blank" class="project-link" href="https://digital-cardapio.vercel.app/">Ver mais <i class="bi bi-box-arrow-up-left"></i></a>
+                                <a target="_blank" class="project-link" href="https://digital-cardapio.vercel.app/">Ver
+                                    mais <i class="bi bi-box-arrow-up-left"></i></a>
                             </button>
                         </li>
                         <li class="card">
                             <div class="img"><img src="images/Screenshot_20.png" alt="img" draggable="false"></div>
                             <h2>NutriBot</h2>
                             <button class="link-button">
-                                <a target="_blank" class="project-link" href="https://nutri-bot-site.vercel.app/">Veja Mais <i class="bi bi-box-arrow-up-left"></i></a>                            
+                                <a target="_blank" class="project-link" href="https://nutri-bot-site.vercel.app/">Veja
+                                    Mais <i class="bi bi-box-arrow-up-left"></i></a>
                             </button>
                         </li>
                         <li class="card">
                             <div class="img"><img src="images/Screenshot_25.png" alt="img" draggable="false"></div>
                             <h2>Outlet Sports</h2>
                             <button class="link-button">
-                                <a target="_blank" class="project-link" href="https://outlet-sports.vercel.app/">Veja Mais <i class="bi bi-box-arrow-up-left"></i></a>                           
+                                <a target="_blank" class="project-link" href="https://outlet-sports.vercel.app/">Veja
+                                    Mais <i class="bi bi-box-arrow-up-left"></i></a>
                             </button>
                         </li>
                         <li class="card">
                             <div class="img"><img src="images/Screenshot_22.png" alt="img" draggable="false"></div>
-                            <h2>Outlet Sports</h2>
+                            <h2>Jujutsu kaisen page</h2>
                             <button class="link-button">
-                                <a target="_blank" class="project-link" href="https://pagina-jjk.vercel.app/">Veja Mais <i class="bi bi-box-arrow-up-left"></i></a>                           
+                                <a target="_blank" class="project-link" href="https://pagina-jjk.vercel.app/">Veja Mais
+                                    <i class="bi bi-box-arrow-up-left"></i></a>
                             </button>
                         </li>
                     </ul>
@@ -107,17 +117,82 @@
                     <h2>My Skills</h2>
                 </div>
                 <div class="my-skills__block">
-                    <div class="my-skills__block__left-block">
-                        <img class="my-skills__left-block__img" src="#" alt="">
-                        <p class="my-skills__block__left-block__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In earum voluptates voluptate ipsam, debitis sit facere, sunt eligendi iusto aperiam dolores eaque et aspernatur unde harum nam, sint laudantium explicabo!</p>
+                    <div data-aos="fade-right" class="my-skills__block__left-block">
+                        <i class=" bi bi-code-slash"></i>
+                        <h3>Backend</h3>
+                        <p class="my-skills__block__left-block__p">on the backend, I am adept at working in Python using
+                            Django, Flask and FastApi as the main frameworks</p>
                     </div>
-                    <div class="my-skills__block__right-block">
-                        <img class="my-skills__right-block__img" src="#" alt="">
-                        <p class="my-skills__block__right-block__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In earum voluptates voluptate ipsam, debitis sit facere, sunt eligendi iusto aperiam dolores eaque et aspernatur unde harum nam, sint laudantium explicabo!</p>
+                    <div data-aos="fade-left" class="my-skills__block__right-block">
+                        <i class="bi bi-magic"></i>
+                        <h3>Frontend</h3>
+                        <p class="my-skills__block__right-block__p">on frontend, I am adept at working in HTML, CSS
+                            and JavaScript, using pre-processors such as gulp and parcel and using frameworks such
+                            as React or Vue.</p>
                     </div>
+                </div>
+                <div class="title-language">
+                    <h2 class="h2-languages">Languages and frameworks</h2>
+                </div>
+                <div data-aos="fade-up" class="language">
+                    <i class="language__html devicon-html5-plain colored"></i>
+                    <i class="language__css devicon-css3-plain colored"></i>
+                    <i class="language__js devicon-javascript-plain colored"></i>
+                    <i class="devicon-react-original colored"></i>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+                    <i class="language__flask devicon-flask-original colored"></i>
+                    <i class="language__django devicon-django-plain-wordmark colored"></i>
+                    <i class="language__fastapi devicon-fastapi-plain colored"></i>
                 </div>
             </div>
         </section>
+        <section class="section" id="contact">
+            <div class="contact-h2">
+                <h2>Contact me</h2>
+            </div>
+            <div class="contact">
+                <div data-aos="fade-right" class="contact_container-sm">
+                    <h3 class="contact__h3">any cool project ideas in mind? <span>Let's discuss them.</span></h3>
+                    <div class="contact__social-media">
+                        <div class="instagram-div">
+                            <a class="icon-a" href="#">
+                                <img class="icon-img" src="./images/instagram.png" alt="instagram">
+                            </a>
+                        </div>
+                        <div class="linkedin-div">
+                            <a class="icon-a" href="#">
+                                <img class="icon-img" src="./images/linkedin.png" alt="linkedin">
+                            </a>
+                        </div>
+                        <div class="github-div">
+                            <a class="icon-a" href="#">
+                                <img class="icon-img" src="./images/github.png" alt="github">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-left" class="contact_container-img">
+                    <img class="contact__img" src="./images/contact-head-office.svg" alt="contact-cartoon">
+                </div>
+            </div>
+            <div class="formulario">
+                <h3>Send me your best email</h3>
+                <div  data-aos="fade-up" class="formulario__contact-input">
+                    <form class="formulario__contact-input__form">
+                        <div class="formulario__contact-input__form--container">
+                            <i class="bi bi-envelope"></i>
+                            <input class="formulario__contact-input__form__name" placeholder="your email" type="text">
+                        </div>
+                        <button class="form-button" type="submit">send</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <p>author page made by me @FelipeMrtnsDev</p>
+        </footer>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
