costs app added

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,14 @@
                                         <i class="bi bi-box-arrow-up-left"></i></a>
                                 </button>
                             </li>
+                            <li class="card">
+                                <div class="img"><img src="images/Screenshot_28.png" alt="img" draggable="false"></div>
+                                <h2>Costs projetos</h2>
+                                <button class="link-button">
+                                    <a target="_blank" class="project-link" href="http://costs-app-six.vercel.app">Veja Mais
+                                        <i class="bi bi-box-arrow-up-left"></i></a>
+                                </button>
+                            </li>
                         </ul>
                         <i id="right" class="fa-solid fa-angle-right"></i>
                     </div>
