--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,7 @@
                     <div class="about">
                         <img data-aos="fade-right" class="about__img" src="./images/about-img.jpg" alt="">
                         <div class="about__specs" data-aos="fade-left">
-                            <h2>Full Stack Python Developer in training at EBAC - British School of
-                                Creative Arts and Technology, graduating in Software Engineering from FAMETRO - Faculdade
-                                Metropolitana de Manaus. Professional with a persistent, curious and engaged profile.</h2>
+                            <h2>Full Stack Developer at Nexus-Skill, specializing in Next.js, React, TypeScript, and React Native. Passionate about software development, with experience in building RESTful APIs using Node.js, Express, and MySQL. Currently working on Agendei, a personal project for medical appointment scheduling, and developing a life system for a game. Dedicated, persistent, and always eager to learn and innovate. Pursuing a degree in Software Engineering at FAMETRO – Faculdade Metropolitana de Manaus.</h2>
                             <table>
                                 <tr>
                                     <td>Felipe Martins De Souza</td>
@@ -102,15 +100,12 @@
                         <div data-aos="fade-right" class="my-skills__block__left-block">
                             <i class=" bi bi-code-slash"></i>
                             <h3>Backend</h3>
-                            <p class="my-skills__block__left-block__p">on the backend, I am adept at working in Python using
-                                Django, Flask and FastApi as the main frameworks</p>
+                            <p class="my-skills__block__left-block__p">On the backend, I specialize in Node.js, working with Express and NestJS to develop scalable APIs. I have experience managing databases like MySQL, PostgreSQL, and MongoDB, as well as implementing authentication with JWT and OAuth for secure access control.</p>
                         </div>
                         <div data-aos="fade-left" class="my-skills__block__right-block">
                             <i class="bi bi-magic"></i>
                             <h3>Frontend</h3>
-                            <p class="my-skills__block__right-block__p">on frontend, I am adept at working in HTML, CSS
-                                and JavaScript, using pre-processors such as gulp and parcel and using frameworks such
-                                as React or Vue.</p>
+                            <p class="my-skills__block__right-block__p">On the frontend, I specialize in React and Next.js, building dynamic and responsive interfaces. I have experience with TypeScript, Styled Components, and state management using Redux. Additionally, I work with modern tools like Vite and Webpack for optimized performance.</p>
                         </div>
                     </div>
                     <div class="title-language">
@@ -119,14 +114,14 @@
                     <div data-aos="fade-up" class="language">
                         <i class="language__html devicon-html5-plain colored"></i>
                         <i class="language__css devicon-css3-plain colored"></i>
-                        <i class="language__js devicon-javascript-plain colored"></i>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg" />
                         <i class="devicon-react-original colored"></i>
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original.svg" />
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg" />
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-                        <i class="language__flask devicon-flask-original colored"></i>
-                        <i class="language__django devicon-django-plain-wordmark colored"></i>
-                        <i class="language__fastapi devicon-fastapi-plain colored"></i>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-plain.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
                     </div>
                 </div>
             </section>
